# LLAMA_modality_gap

./: .gitignore  Makefile  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt
configs/: captioning.yaml  chameleon.yaml  data.yaml  data_1300.yaml  data_ood.yaml  description_eval.yaml  encoders.yaml  llm.yaml  ood_eval.yaml  projector.yaml  training_c4.yaml  training_c5.yaml  training_c6.yaml  training_stage1.yaml  training_stage2.yaml  training_stage2_full.yaml
scripts/: 00_setup_env.sh  01_download_data.sh  02_build_diagnostic_manifest.py  02_extract_embeddings.py  03_compute_gap.py  04_make_plots.py  05_train_stage1.py  06_train_stage2.py  07_extract_projected.py  08_run_captioning.py  09_score_captions.py  10_run_vlmevalkit.py  11_link_gap_to_captions.py  12_intervene_subspace.py  13_chameleon_gap.py  14_train_c4_joint.py  15_clipscore.py  16_intervene_geometry.py  17_train_c5_distance.py  18_train_c6_orientation_pinned.py  19_chair.py  21_extract_clip_text_anchor.py  22_eval_pope.py  23_eval_vqav2.py  24_eval_gqa.py  chair_synonyms.txt  check_eval_overlap.py  check_gqa_content_overlap.py  check_task_mix.py  e2e_smoke_50pairs.py  prep_dd256_gap_manifest.py  prep_ood_eval.py  prep_ood_refs.py  run_condition.py  submit_c1.sbatch  submit_c1_full.sbatch  submit_c2.sbatch  submit_c3.sbatch  submit_c3_full.sbatch  submit_c4.sbatch  (+27 more)
src/captioning/: evaluation.py  inference.py
src/data/: bunny_loader.py  bunny_v1_1_loader.py  coco_loader.py  coco_train_captions.py  coco_val2017_loader.py  internvl_loader.py  llava_instruct_loader.py  transforms.py
src/diagnostics/: chameleon_extract.py  extract_embeddings.py  extract_projected.py  metrics.py  plots.py
src/encoders/: base.py  clip_encoder.py  clip_text_encoder.py  llm2clip_encoder.py
src/evaluation/: vlmevalkit_adapter.py
src/models/: checkpoint.py  projector.py  vlm.py
src/training/: contrastive_loss.py  stage1_pretrain.py  stage2_distance_sft.py  stage2_joint_sft.py  stage2_orientation_pinned_sft.py  stage2_sft.py  trainer_utils.py
src/utils/: distributed.py  io.py  notify.py  reproducibility.py
tests/: test_captioning_eval.py  test_checkpoint.py  test_clip_encoder.py  test_conditions.py  test_configs.py  test_contrastive_loss.py  test_data_loader.py  test_data_loaders_bunny_llava.py  test_encoders.py  test_metrics.py  test_plots.py  test_projector.py  test_training_smoke.py  test_vlm.py  test_vlmevalkit_adapter.py
